Adding Cancel button

--- a/MemeGenerator/Base.lproj/Main.storyboard
+++ b/MemeGenerator/Base.lproj/Main.storyboard
@@ -17,17 +17,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kel-d4-ZEY" userLabel="generateButton">
-                                <rect key="frame" x="268" y="104" width="64" height="30"/>
-                                <state key="normal" title="Generate"/>
-                                <connections>
-                                    <action selector="generateTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Syw-ZU-6aV"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="THJ-JV-uXM" userLabel="memeImageView">
                                 <rect key="frame" x="20" y="142" width="560" height="458"/>
                             </imageView>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="88A-Z5-1NU">
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="88A-Z5-1NU">
                                 <rect key="frame" x="282" y="352" width="37" height="37"/>
                                 <color key="color" red="0.098039217293262482" green="0.098039217293262482" blue="0.098039217293262482" alpha="1" colorSpace="calibratedRGB"/>
                             </activityIndicatorView>
@@ -49,6 +42,19 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nGg-S7-hBN">
+                                <rect key="frame" x="240" y="104" width="120" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kel-d4-ZEY" userLabel="generateButton">
+                                        <rect key="frame" x="0.0" y="0.0" width="64" height="30"/>
+                                        <state key="normal" title="Generate"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XMN-Qz-7wX" userLabel="cancelButton">
+                                        <rect key="frame" x="72" y="0.0" width="48" height="30"/>
+                                        <state key="normal" title="Cancel"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -57,15 +63,15 @@
                             <constraint firstItem="88A-Z5-1NU" firstAttribute="centerX" secondItem="THJ-JV-uXM" secondAttribute="centerX" id="8vl-Zr-G01"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="THJ-JV-uXM" secondAttribute="bottom" id="Bj6-pF-sXd"/>
                             <constraint firstItem="THJ-JV-uXM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="FOp-T5-XRa"/>
-                            <constraint firstItem="Kel-d4-ZEY" firstAttribute="centerX" secondItem="THJ-JV-uXM" secondAttribute="centerX" id="LIl-Uy-c13"/>
+                            <constraint firstItem="nGg-S7-hBN" firstAttribute="centerX" secondItem="GBC-IZ-Ejn" secondAttribute="centerX" id="Hl1-gx-Ef5"/>
                             <constraint firstItem="GBC-IZ-Ejn" firstAttribute="centerX" secondItem="THJ-JV-uXM" secondAttribute="centerX" id="QtJ-5c-flI"/>
-                            <constraint firstItem="GBC-IZ-Ejn" firstAttribute="centerX" secondItem="Kel-d4-ZEY" secondAttribute="centerX" id="S8q-NB-Jnp"/>
-                            <constraint firstItem="Kel-d4-ZEY" firstAttribute="top" secondItem="GBC-IZ-Ejn" secondAttribute="bottom" constant="8" id="Sc7-JQ-xbD"/>
                             <constraint firstItem="3Ey-HG-ak6" firstAttribute="centerX" secondItem="THJ-JV-uXM" secondAttribute="centerX" id="Vnn-Jn-g46"/>
                             <constraint firstItem="3Ey-HG-ak6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eHR-7Q-3T9"/>
+                            <constraint firstItem="nGg-S7-hBN" firstAttribute="centerX" secondItem="THJ-JV-uXM" secondAttribute="centerX" id="eqT-Aa-h2r"/>
                             <constraint firstItem="88A-Z5-1NU" firstAttribute="centerY" secondItem="THJ-JV-uXM" secondAttribute="centerY" id="jid-S9-VN7"/>
                             <constraint firstItem="GBC-IZ-Ejn" firstAttribute="top" secondItem="3Ey-HG-ak6" secondAttribute="bottom" constant="8" id="khI-GT-8EL"/>
-                            <constraint firstItem="THJ-JV-uXM" firstAttribute="top" secondItem="Kel-d4-ZEY" secondAttribute="bottom" constant="8" id="ozQ-jT-Z08"/>
+                            <constraint firstItem="THJ-JV-uXM" firstAttribute="top" secondItem="nGg-S7-hBN" secondAttribute="bottom" constant="8" id="mti-gC-bWX"/>
+                            <constraint firstItem="nGg-S7-hBN" firstAttribute="top" secondItem="GBC-IZ-Ejn" secondAttribute="bottom" constant="8" id="oCa-ej-Sbr"/>
                             <constraint firstItem="3Ey-HG-ak6" firstAttribute="centerX" secondItem="GBC-IZ-Ejn" secondAttribute="centerX" id="ybU-6M-dOg"/>
                         </constraints>
                         <variation key="default">
@@ -77,6 +83,7 @@
                     </view>
                     <connections>
                         <outlet property="bottomTextField" destination="GBC-IZ-Ejn" id="cvb-qe-rI8"/>
+                        <outlet property="cancelButton" destination="XMN-Qz-7wX" id="euC-SJ-tzi"/>
                         <outlet property="generateButton" destination="Kel-d4-ZEY" id="LzP-2b-iiE"/>
                         <outlet property="memeImageView" destination="THJ-JV-uXM" id="taU-wH-r6T"/>
                         <outlet property="networkActivityIndicatorView" destination="88A-Z5-1NU" id="lF1-0Q-jXk"/>
